# AITradePro

./: .dockerignore  .env.example  .envrc  .eslintrc.json  .gitignore  .hadolint.yaml  .replit  .yamllint  AUDIT_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  MIGRATION_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  audit-ci.json  codecov.yml  drizzle.config.ts  eslint.config.js  package-lock.json  package.json  replit.md  vitest.config.ts
.gemini/: config.md  styleguide.md
.github/: copilot-instructions.md  pull_request_template.md  roadmap.yml
.github/ISSUE_TEMPLATE/: copilot-task.yml  roadmap_item.md
.github/workflows/: ci-cd-workflow.yml  ci.yml  copilot-task.yml  production-ci.yml  validate-docs.yml
.husky/: pre-commit
attached_assets/: Pasted-Please-review-and-refactor-this-TypeScript-JavaScript-codebase-to-meet-modern-production-ready-stand-1753536837592_1753536837593.txt  Pasted-setup-python-ci-pipeline-echo-Setting-up-code-quality-and-CI-pipeline-Ensure-we-r-1753538356102_1753538356102.txt  content-1753535694055.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py  settings.py
backend/app/analytics/: metrics.py  report.py
backend/app/core/: config.py  logging.py
backend/app/domain/: enums.py  models.py
backend/app/engine/: broker.py  clock.py  execution.py  portfolio.py  recorder.py  simulator.py  strategy.py
backtesting/: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  alembic.ini  pyproject.toml  requirements.txt
backtesting/alembic/: env.py  script.py.mako
backtesting/app/: __init__.py  config.py  database.py
backtesting/app/models/: __init__.py  backtest.py
backtesting/app/schemas/: __init__.py  backtest.py
backtesting/tests/: __init__.py  conftest.py  test_models.py  test_schemas.py
client/src/: App.tsx  index.css
client/src/components/: ErrorBoundary.tsx
client/src/components/trading/: ai-insights.tsx  header.tsx  main-dashboard.tsx  market-correlation.tsx  news-feed.tsx  order-book.tsx  pattern-matching.tsx  portfolio-chart.tsx  price-chart.tsx  rag-analysis.tsx  recent-trades.tsx  sidebar.tsx  system-status.tsx  worker-queue.tsx
client/src/components/ui/: carousel.tsx  toaster.tsx
client/src/hooks/: use-toast.ts  use-websocket.tsx
client/src/pages/: dashboard.tsx
client/src/test/: setup.ts
client/src/test/components/: AIInsights.test.tsx  Dashboard.test.tsx
client/src/types/: trading.ts
docs/: BACKTESTING_IMPLEMENTATION.md  CI_CD_WORKFLOWS.md  IMPLEMENTATION_SUMMARY.md  copilot-codex-configuration-guide.md  copilot-codex-guide.md  enum-usage-examples.md  event-driven-backtesting-implementation.md  index.html  mcp-backtesting-architecture.md  nodejs-mcp-client-implementation.md  python-backtesting-implementation.md  schema-migration-diagram.md  workflow-maintenance-guide.md
issues/: feature-backtesting-backtrading.md
labels/: P0-critical.json
migrations/: 001_add_enum_types.sql  002_migrate_strategies_table.sql  003_migrate_backtest_runs_table.sql  004_add_backtest_trades_columns.sql  005_validate_migration.sql  README.md  ROLLBACK.sql
scripts/: roadmap-tracker.js
server/: db.ts  index.ts  routes.ts  storage-db.ts  storage.ts  vite.ts
server/backtesting/: README.md  analytics.ts  broker.ts  clocks.ts  engine.ts  routes.ts  service.ts  strategy.ts  types.ts
server/backtesting/strategies/: moving-average.ts  rsi.ts
server/db/migrations/: 002_backtesting_tables.sql
server/middleware/: auth.ts  cors.ts  helmet.ts  validation.ts
server/python-services/backtesting-mcp/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
server/python-services/backtesting-mcp/backtesting/: __init__.py
server/python-services/backtesting-mcp/backtesting/strategies/: __init__.py
server/python-services/backtesting-mcp/config/: settings.py
server/python-services/backtesting-mcp/database/: __init__.py
server/python-services/backtesting-mcp/mcp_server/: __init__.py  schemas.py  server.py  tools.py
server/python-services/backtesting-mcp/tests/: __init__.py
server/python-services/backtesting-mcp/utils/: __init__.py  logger.py
server/services/: ai-analysis.ts  async-workers.ts  db-init.ts  market-data.ts  vector-store.ts
server/test/: middleware.test.ts  routes.test.ts  storage.test.ts
server/test/backtesting/: analytics.test.ts  broker.test.ts  enum-validation.test.ts  strategy.test.ts
server/types/: auth.ts  backtesting.ts  websocket.ts
server/utils/: logger.ts
shared/: backtesting-schema.ts  schema-sqlite.ts  schema.ts
