[tool.poetry]
name = "aitradepro-backtesting-mcp"
version = "0.1.0"
description = "MCP Backtesting Service for AITradePro"
authors = ["AITradePro Team"]
readme = "README.md"
python = "^3.10"

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
vectorbt = "^0.26.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.0"}
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=backtesting --cov=mcp_server"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
